--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Monty — Psychotherapist, Educator, Mental Fitness Coach</title>
-  <meta name="description" content="Therapy, mental fitness, and consulting blending evidence-based practice with contemplative traditions.">
+  <title>Montgomery — Psychotherapist, Educator, Mental Fitness Coach</title>
+  <meta name="description" content="Mindset transformation, mental fitness, and consulting blending evidence-based practice with contemplative traditions.">
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
-  <meta property="og:title" content="Monty — Psychotherapist, Educator, Mental Fitness Coach">
+  <meta property="og:title" content="Montgomery — Clinician, MBA, Educator, Mental Fitness Coach">
   <meta property="og:description" content="Therapy, mental fitness, and consulting blending evidence-based practice with contemplative traditions.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="assets/img/profile.jpg">
@@ -27,9 +27,9 @@
   <section class="hero">
     <div>
       <span class="kicker">Therapy • Coaching • Consulting</span>
-      <h1>Better Minds. Better Outcomes.</h1>
+      <h1>Better Mindset. Better Outcomes.</h1>
       <p>I help people and organizations rewire patterns—combining clinical psychotherapy with mindfulness,
-      neuroplasticity practices, and practical success psychology.</p>
+      neuroplasticity practices, and practical success psychology. Comnmon therapy is built on Cognitivbe Behavioral Therapy developed in the 1950s and 1960s by Beck and Ellis. The principle is that behjavior comes from emotion and emotion comes from thought. But what does thought come from? According to the latest research, our thoughts are developed by our mindset. By transforming our mindset, our core beliefs about ourselves and success - we can create new and better versions of our lives..</p>
       <div style="display:flex;gap:12px;margin-top:12px">
         <a class="button" href="contact.html">Book a Session</a>
         <a class="button secondary" href="about.html">Learn More</a>
@@ -69,7 +69,7 @@
       </div>
       <div class="card">
         <span class="kicker">Special Interests</span>
-        <h2 class="h2">UAP & PSI-informed curiosity</h2>
+        <h2 class="h2">PSI-informed curiosity</h2>
         <p>Open-minded, evidence-oriented exploration of anomalous cognition and the human drive for meaning—always grounded, always practical.</p>
       </div>
     </div>
