--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="About Monty — Practice & Approach">
   <meta property="og:description" content="Monty blends psychotherapy, meditation, and success psychology for practical transformation.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/img/profile.jpg">
+  <meta property="og:image" content="assets/img/mprofile.jpg">
   <link rel="stylesheet" href="assets/css/styles.css">
   <script defer src="assets/js/main.js"></script>
 </head>
@@ -37,7 +37,7 @@
         </ul>
       </div>
       <div class="card">
-        <img alt="Profile" src="assets/img/profile.jpg" style="width:100%">
+        <img alt="Profile" src="assets/img/mprofile.jpg" style="width:100%">
       </div>
     </div>
   </section>
