--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Montgomery — Clinician, MBA, Educator, Mental Fitness Coach">
   <meta property="og:description" content="Therapy, mental fitness, and consulting blending evidence-based practice with contemplative traditions.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/img/profile.jpg">
+  <meta property="og:image" content="assets/img/mprofile.jpg">
   <link rel="stylesheet" href="assets/css/styles.css">
   <script defer src="assets/js/main.js"></script>
 </head>
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div>
-      <img alt="Profile" src="assets/img/profile.jpg">
+      <img alt="Profile" src="assets/img/mprofile.jpg">
     </div>
   </section>
 
