--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
     <div class="grid two">
       <div class="card">
         <h2 class="h2">About</h2>
-        <p>I’m Monty — psychotherapist, educator, mental fitness coach, and business/success consultant.
-        I help people cultivate adaptive mindsets, resolve blocks, and design rituals that stick.</p>
+        <p><Montgomery— psychotherapist, educator, mental fitness coach, and business success consultant.
+        I help people cultivate adaptive mindsets, resolve blocks, and design practices that stick.</p>
         <ul>
           <li>Clinical modalities: CBT • ACT • mindfulness-based interventions</li>
           <li>Contemplative lineages: Buddhist, Shinto, Kabbalah; comparative anthropology of spirituality</li>
@@ -45,8 +45,8 @@
     <footer>
       <hr>
       <div class="grid two">
-        <div>&copy; <span id="year"></span> Monty — Psychotherapist • Educator • Mental Fitness Coach.</div>
-        <div style="text-align:right">Made with curiosity about UAP, PSI, and a growth mindset.</div>
+        <div>&copy; <span id="year"></span> Montgomery — Psychotherapist • Educator • Mental Fitness Coach.</div>
+        <div style="text-align:right">Made with curiosity about mindfulness, PSI, and a growth mindset.</div>
       </div>
     </footer>
   </div>
