--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Montgomery — Clinician, MBA, Educator, Mental Fitness Coach">
   <meta property="og:description" content="Therapy, mental fitness, and consulting blending evidence-based practice with contemplative traditions.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/img/mprofile.jpg">
+  <meta property="og:image" content="assets/img/profile.jpg">
   <link rel="stylesheet" href="assets/css/styles.css">
   <script defer src="assets/js/main.js"></script>
 </head>
@@ -29,14 +29,14 @@
       <span class="kicker">Therapy • Coaching • Consulting</span>
       <h1>Better Mindset. Better Outcomes.</h1>
       <p>I help people and organizations rewire patterns—combining clinical psychotherapy with mindfulness,
-      neuroplasticity practices, and practical success psychology. Comnmon therapy is built on Cognitivbe Behavioral Therapy developed in the 1950s and 1960s by Beck and Ellis. The principle is that behjavior comes from emotion and emotion comes from thought. But what does thought come from? According to the latest research, our thoughts are developed by our mindset. By transforming our mindset, our core beliefs about ourselves and success - we can create new and better versions of our lives..</p>
+      neuroplasticity practices, and practical success psychology. Comnmon therapy is built on Cognitivbe Behavioral Therapy developed in the 1950s and 1960s by Beck and Ellis. The principle is that behavior comes from emotion and emotion comes from thought. But what does thought come from? According to the latest research, our thoughts are developed by our mindset. By transforming our mindset, our core beliefs about ourselves and success - we can create new and better versions of our lives..</p>
       <div style="display:flex;gap:12px;margin-top:12px">
         <a class="button" href="contact.html">Book a Session</a>
         <a class="button secondary" href="about.html">Learn More</a>
       </div>
     </div>
     <div>
-      <img alt="Profile" src="assets/img/mprofile.jpg">
+      <img alt="Profile" src="assets/img/profile.jpg">
     </div>
   </section>
 
