--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="About Montgomery — Practice & Approach">
   <meta property="og:description" content="Montgomery blends psychotherapy, meditation, and success psychology for practical transformation.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/img/mprofile.jpg">
+  <meta property="og:image" content="assets/img/profile.jpg">
   <link rel="stylesheet" href="assets/css/styles.css">
   <script defer src="assets/js/main.js"></script>
 </head>
