--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <span class="kicker">Therapy • Coaching • Consulting</span>
       <h1>Better Mindset. Better Outcomes.</h1>
       <p>I help people and organizations rewire patterns—combining clinical psychotherapy with mindfulness,
-      neuroplasticity practices, and practical success psychology. Comnmon therapy is built on Cognitivbe Behavioral Therapy developed in the 1950s and 1960s by Beck and Ellis. The principle is that behavior comes from emotion and emotion comes from thought. But what does thought come from? According to the latest research, our thoughts are developed by our mindset. By transforming our mindset, our core beliefs about ourselves and success - we can create new and better versions of our lives..</p>
+      neuroplasticity practices, and practical success psychology. Most therapy is built on Cognitive Behavioral Therapy theories developed in the 1950s and 1960s by Beck and Ellis. The principle is that behavior comes from emotion and emotion comes from thought. But what does thought come from? According to the latest research, our thoughts are developed by our mindset. By transforming our mindset, our core beliefs about ourselves and success - we can create new and better versions of our lives..</p>
       <div style="display:flex;gap:12px;margin-top:12px">
         <a class="button" href="contact.html">Book a Session</a>
         <a class="button secondary" href="about.html">Learn More</a>
@@ -65,11 +65,11 @@
       <div class="card">
         <span class="kicker">Philosophy</span>
         <h2 class="h2">Ancient insight, modern practice</h2>
-        <p>From shamanic attentional training to Buddhist and Shinto practices to Kabbalistic inquiry—integrated with contemporary neuroscience and Carol Dweck’s growth mindset.</p>
+        <p>From shamanic attentional training to Eastern practices to Kabbalistic inquiry—integrated with contemporary neuroscience and Carol Dweck’s growth mindset.</p>
       </div>
       <div class="card">
         <span class="kicker">Special Interests</span>
-        <h2 class="h2">PSI-informed curiosity</h2>
+        <h2 class="h2">Mindfulness in practice</h2>
         <p>Open-minded, evidence-oriented exploration of anomalous cognition and the human drive for meaning—always grounded, always practical.</p>
       </div>
     </div>
@@ -79,7 +79,7 @@
       <hr>
       <div class="grid two">
         <div>&copy; <span id="year"></span> Monty — Psychotherapist • Educator • Mental Fitness Coach.</div>
-        <div style="text-align:right">Made with curiosity about UAP, PSI, and a growth mindset.</div>
+        <div style="text-align:right">Made with curiosity and a growth mindset.</div>
       </div>
     </footer>
   </div>
