--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         </ul>
       </div>
       <div class="card">
-        <img alt="Profile" src="assets/img/mprofile.jpg" style="width:100%">
+        <img alt="Profile" src="assets/img/profile.jpg" style="width:100%">
       </div>
     </div>
   </section>
