--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
         I help people cultivate adaptive mindsets, resolve blocks, and design practices that stick.</p>
         <ul>
           <li>Clinical modalities: CBT • ACT • mindfulness-based interventions</li>
-          <li>Contemplative lineages: Buddhist, Shinto, Kabbalah; comparative anthropology of spirituality</li>
-          <li>Interests: UAP, PSI, and models of consciousness (plasma/sphere theorizing noted with healthy skepticism)</li>
+          <li>Contemplative lineages: Buddhist, shamanic, Kabbalah; comparative anthropology of spirituality</li>
+          <li>Interests: Quantum Physics, PSI, and models of consciousness (MWI, Orchestrated Object Reduction, Morphogenic Field Theory)</li>
         </ul>
       </div>
       <div class="card">
