--- a/contact.html
+++ b/contact.html
@@ -47,14 +47,14 @@
         <button class="button" type="submit">Send</button>
       </div>
     </form>
-    <p style="margin-top:12px;color:#9aa2b2">Prefer email? Write to <a href="mailto:hello@example.com">hello@example.com</a>.</p>
+    <p style="margin-top:12px;color:#9aa2b2">Prefer email? Write to <a href="mailto:montgomery@discovery-science.com">montgomery@discovery-science.com</a>.</p>
   </section>
 
     <footer>
       <hr>
       <div class="grid two">
         <div>&copy; <span id="year"></span> Monty — Psychotherapist • Educator • Mental Fitness Coach.</div>
-        <div style="text-align:right">Made with curiosity about UAP, PSI, and a growth mindset.</div>
+        <div style="text-align:right">Made with curiosity about Neuropsychology, PSI, and a growth mindset.</div>
       </div>
     </footer>
   </div>
